@@ -23,9 +23,9 @@
 /*  Inheritance diagram
  *  ═══════════════════
  *
- *      ▕▔▔▔▔▔▔▔▔▏
- *      ▕ FTimer ▏
- *      ▕▁▁▁▁▁▁▁▁▏
+ *    ▕▔▔▔▔▔▔▔▔▔▔▔▔▔▔▏
+ *    ▕ FObjectTimer ▏
+ *    ▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
  *           ▲
  *           │
  *      ▕▔▔▔▔▔▔▔▔▔▏
