@@ -20,12 +20,13 @@
 * <http://www.gnu.org/licenses/>.                                      *
 ***********************************************************************/
 
-/*  Base class
- *  ══════════
+/*  Standalone class    Base class
+ *  ════════════════    ══════════
+ *                     
+ *     ▕▔▔▔▔▔▔▔▔▏    ▕▔▔▔▔▔▔▔▔▔▔▔▔▔▔▏
+ *     ▕ FTimer ▏    ▕ FObjectTimer ▏
+ *     ▕▁▁▁▁▁▁▁▁▏    ▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
  *
- * ▕▔▔▔▔▔▔▔▔▏
- * ▕ FTimer ▏
- * ▕▁▁▁▁▁▁▁▁▏
  */
 
 #ifndef FTIMER_H
