@@ -1,3 +1,7 @@
+2023-05-31  Markus Gans  <guru.mail@muenster.de>
+	* Fix setFormatedNumber() in FString for separator > 127 
+	  (e.g. non-breaking space)
+
 2023-05-18  Markus Gans  <guru.mail@muenster.de>
 	* Version 0.9.0
 
